Fix hover of MIPs in Mip Sets (light and dark mode).

--- a/frontend/src/app/modules/mips/components/list-mipset-mode/list-mipset-mode.component.scss
+++ b/frontend/src/app/modules/mips/components/list-mipset-mode/list-mipset-mode.component.scss
@@ -1035,6 +1035,9 @@ app-sublist {
   }
 }
 
+::ng-deep tr.mat-row.maker-element-row:hover {
+  background: #F5F6FA;
+}
 
 ::ng-deep tr.mat-row.maker-element-subset-row.example-expanded-row + tr.mat-row > td {
   border-bottom: none !important;
